# config-loader

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: de.rs  error.rs  lib.rs  loader.rs  map.rs  special.rs  value.rs
tests/: config.toml  config.yaml  database.json  load_from_file.rs  load_nested_edge_cases.rs  load_nested_from_file.rs  yaml_alias.yaml  yaml_complex_key.yaml  yaml_special_env_non_string.yaml  yaml_special_path_non_string.yaml
tests/nested/: env_root.json  missing_root.json  root.json
tests/nested/level1/: service.toml  service_env.toml  service_missing.toml
tests/nested/level1/level2/: database.yaml  database_env.yaml  database_missing.yaml
tests/nested/level1/level2/level3/: credentials.json
