[package]
name = "load-config"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Jiaxiang Zhang <nuclefpv@gmail.com>"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/NuclEnergy/load-config"
homepage = "https://github.com/NuclEnergy/load-config"
description = "A configuration loader library that supports multiple formats."
categories = ["config"]
keywords = ["config", "loader", "settings", "env", "file"]

[features]
default = ["json", "json5", "preserve_order", "toml", "yaml"]
json = ["dep:serde_json"]
json5 = ["dep:json5"]
preserve_order = ["dep:indexmap", "serde_json?/preserve_order", "toml?/preserve_order"]
toml = ["dep:toml"]
yaml = ["dep:yaml-rust2"]

[dependencies]
indexmap = { version = "2.13.1", optional = true }
json5 = { version = "1.3.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde-untagged = { version = "0.1.9", optional = true }
serde_core = { version = "1.0.228" }
serde_json = { version = "1.0.149", optional = true }
toml = { version = "1.1.2", optional = true }
yaml-rust2 = { version = "0.11.0", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
